search-type-manager: Only look for nmm:Photos inside collections

... not nie:InformationElements. Since we don't want nested collections
(see commit be7553dbb4db), we are only interested in the nmm:Photo
objects that a nfo:DataContainer might have. So, let's tighten the net
a bit.

https://bugzilla.gnome.org/show_bug.cgi?id=770782